# extensions

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  compose.yaml  devenv.nix  renovate.json  rust-toolchain.toml  taplo.toml
cli/postgres/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  grafbase-postgres.toml  install.sh
cli/postgres/src/: args.rs  main.rs
cli/protoc-gen-grafbase-subgraph/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  build.rs  install.sh
cli/protoc-gen-grafbase-subgraph/proto/grafbase/: options.proto
cli/protoc-gen-grafbase-subgraph/src/: main.rs  render_graphql_sdl.rs  schema.rs  translate_schema.rs
cli/protoc-gen-grafbase-subgraph/src/render_graphql_sdl/: graphql_types.rs  schema_directives.rs  services.rs
cli/protoc-gen-grafbase-subgraph/src/schema/: records.rs  view.rs
cli/protoc-gen-grafbase-subgraph/src/translate_schema/: derive.rs  options.rs
cli/protoc-gen-grafbase-subgraph/tests/: codegen_tests.rs
cli/protoc-gen-grafbase-subgraph/tests/snapshots/: codegen_tests__graphql file@birds__nested.proto.snap  codegen_tests__graphql file@options__grafbase__options.proto.snap  codegen_tests__graphql file@options__inventory.proto.snap
cli/protoc-gen-grafbase-subgraph/tests/testcases/: argument_directives.proto  argument_directives.snap  birds_nested.proto  birds_nested.snap  composite_schemas_entity.proto  composite_schemas_entity.snap  composite_schemas_entity_already_defined.proto  composite_schemas_entity_already_defined.snap  composite_schemas_entity_composite.proto  composite_schemas_entity_composite.snap  composite_schemas_entity_message_level.proto  composite_schemas_entity_message_level.snap  composite_schemas_entity_no_duplicate.proto  composite_schemas_entity_no_duplicate.snap  composite_schemas_shortcuts.proto  composite_schemas_shortcuts.snap  echo.proto  echo.snap  input_argument_directives.proto  input_argument_directives.snap  inventory.proto  inventory.snap  multi_subgraph.proto  multi_subgraph.snap  no_services.proto  no_services.snap  object_extra_fields.proto  object_extra_fields.snap  optional_fields.proto  optional_fields.snap  routeguide.proto  routeguide.snap  schema_directives.proto  schema_directives.snap  shared_subgraphs.proto  shared_subgraphs.snap  taqueria.proto  taqueria.snap  well_known_types.proto  well_known_types.snap
crates/postgres-introspection/: Cargo.toml
crates/postgres-introspection/src/: columns.rs  config.rs  enums.rs  foreign_keys.rs  keys.rs  lib.rs  render.rs  schemas.rs  tables.rs
crates/postgres-introspection/src/render/: ast.rs  derives.rs  directive.rs  enum.rs  enums.rs  field.rs  input.rs  input_types.rs  mutation.rs  output_types.rs  query.rs  scalars.rs  schema.rs  schema_directives.rs  tables.rs  type.rs
crates/template/: Cargo.toml
crates/template/src/: content.rs  lib.rs
extensions/authenticated/: Cargo.toml  README.md  definitions.graphql  extension.toml
extensions/authenticated/src/: lib.rs
extensions/authenticated/tests/: integration_tests.rs
extensions/grpc/: Cargo.toml  README.md  build.rs  definitions.graphql  extension.toml
extensions/grpc/src/: config.rs  conversions.rs  convert_input.rs  directives.rs  lib.rs  resolvers.rs  schema.rs
extensions/grpc/src/conversions/: input.rs  output.rs  tests.rs
extensions/grpc/src/convert_input/: error.rs  grpc_method.rs  message.rs
extensions/grpc/src/resolvers/: streaming_response.rs
extensions/grpc/src/schema/: field_type.rs  ids.rs  records.rs
extensions/grpc/tests/integration/: mod.rs  test_servers.rs  tests.rs
extensions/jwt/: CHANGELOG.md  Cargo.toml  README.md  extension.toml
extensions/jwt/src/: config.rs  decoder.rs  lib.rs
extensions/jwt/tests/: hydra.rs  integration_tests.rs
extensions/jwt/tests/oauth_metadata_tests/: mod.rs
extensions/jwt/tests/unauthenticated_headers_tests/: mod.rs
extensions/kafka/: Cargo.toml  README.md  config.example.toml  definitions.graphql  extension.toml
extensions/kafka/src/: config.rs  directives.rs  lib.rs  subscription.rs
extensions/kafka/tests/: integration_tests.rs
extensions/nats/: Cargo.toml  README.md  definitions.graphql  extension.toml
extensions/nats/src/: lib.rs  subscription.rs  types.rs
extensions/nats/tests/: .integration_tests.rs.pending-snap  integration_tests.rs
extensions/oauth-protected-resource/: Cargo.toml  README.md  extension.toml
extensions/oauth-protected-resource/src/: lib.rs
extensions/oauth-protected-resource/tests/: integration_tests.rs
extensions/postgres/: CHANGELOG.md  Cargo.toml  README.md  definitions.graphql  extension.toml
extensions/postgres/src/: config.rs  context.rs  database_definition.rs  introspect.rs  lib.rs  logger.rs  resolve.rs
extensions/postgres/src/context/: create_input.rs  filter.rs  order.rs  selection_iterator.rs  update_input.rs  update_operation.rs
extensions/postgres/src/database_definition/: enum.rs  enum_variant.rs  foreign_key.rs  ids.rs  key.rs  names.rs  relations.rs  table.rs  table_column.rs  type.rs  walkers.rs
extensions/postgres/src/introspect/: enums.rs  field_mapping.rs  foreign_keys.rs  keys.rs  schemas.rs  tables.rs
extensions/postgres/src/resolve/: builder.rs  create_many.rs  create_one.rs  delete_many.rs  delete_one.rs  find_many.rs  find_one.rs  lookup.rs  query.rs  (+2 more)
extensions/postgres/tests/: integration_tests.rs
extensions/rest/: Cargo.toml  README.md  definitions.graphql  extension.toml
extensions/rest/src/: lib.rs  types.rs
extensions/rest/tests/: integration_tests.rs
extensions/snowflake/: Cargo.toml  README.md  definitions.graphql  extension.toml
extensions/snowflake/src/: lib.rs  statements.rs
extensions/snowflake/tests/: integration_tests.rs
extensions/tag/: Cargo.toml  README.md  extension.toml
extensions/tag/tests/: integration_tests.rs
extensions/www-authenticate/: Cargo.toml  README.md  extension.toml
extensions/www-authenticate/src/: lib.rs
publish-extensions/: Cargo.toml
publish-extensions/src/: main.rs  types.rs
test-matrix/: Cargo.toml
test-matrix/src/: args.rs  cargo_toml.rs  main.rs
(+199 files in other folders)
