[workspace]
resolver = "2"
members = ["extensions/*", "publish-extensions", "test-matrix"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
homepage = "https://grafbase.com/extensions"
keywords = ["grafbase"]
repository = "https://github.com/grafbase/extensions"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
panic = "deny"

# Opt out of lints that have too many false positives or are yet to be addressed.
bool-to-int-with-if = "allow"
cast-possible-truncation = "allow"
default-trait-access = "allow"
derive-partial-eq-without-eq = "allow"
doc-markdown = "allow"
enum-glob-use = "allow"
implicit-hasher = "allow"
items-after-statements = "allow"
into_iter_without_iter = "allow"
iter_without_into_iter = "allow"
large-digit-groups = "allow"
let-underscore-untyped = "allow"
let-with-type-underscore = "allow"
manual-assert = "allow"
map-unwrap-or = "allow"
match-wildcard-for-single-variants = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"
redundant-closure-for-method-calls = "allow"
single-match-else = "allow"
struct-excessive-bools = "allow"
struct-field-names = "allow"
too-many-lines = "allow"
unnecessary-fallible-conversions = "allow"
unused-async = "allow"
unused-self = "allow"
wildcard-imports = "allow"

[workspace.dependencies]
async-nats = "0.40"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = "0.4.40"
duration-str = "0.16.1"
futures = "0.3"
futures-util = "0.3.31"
grafbase-sdk = "0.12.0"
http = "1.3"
indoc = "2.0.6"
insta = { version = "1.42.2", features = ["json"] }
jiff = "0.2.6"
jwt-compact = "0.8.0"
openidconnect = "4.0.0"
ory-client = "=1.9.0"
pem = "3.0.5"
pkcs1 = "0.7.5"
pkcs8 = "0.10.2"
pretty_assertions = "1.4.1"
prost = { version = "0.13.5", default-features = false, features = ["std"] }
rand = "*"
reqwest = "0.12.12"
serde = "1.0.219"
serde_json = "1"
serde_with = "3.12.0"
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tokio-stream = "0.1.17"
toml = "0.8"
tonic = "0.12.3"
tonic-build = { version = "0.12.3", features = ["prost"] }
url = { version = "2.5.4", features = ["serde"] }
wiremock = "0.6.3"
