[package]
name = "test-matrix"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.97"
duct = "0.13.7"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[lints]
workspace = true
