[package]
name = "protoc-gen-grafbase-subgraph"
version = "0.3.1"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
field-selection-map.workspace = true
indexmap.workspace = true
paste.workspace = true
protobuf.workspace = true
protobuf-support.workspace = true

[build-dependencies]
protobuf-codegen = "3"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[lints]
workspace = true
