[package]
name = "grafbase-postgres-introspection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
grafbase-database-definition.workspace = true
indoc.workspace = true
anyhow.workspace = true
sqlx = { workspace = true, default-features = false, features = [
    "sqlx-postgres",
    "json",
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "tls-rustls-ring-native-roots",
    "postgres",
] }
itertools.workspace = true
Inflector.workspace = true
indenter = { version = "0.3.3", features = ["std"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
