[package]
name = "authenticated"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
grafbase-sdk = "0.9.0"

[dev-dependencies]
grafbase-sdk = { version = "0.9.0", features = ["test-utils"] }
indoc = "2.0.6"
insta = { version = "1.42.2", features = ["json"] }
openidconnect = "4.0.0"
ory-client = "=1.18.5"
reqwest = "0.12.12"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
