[package]
name = "authenticated"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
grafbase-sdk.workspace = true

[dev-dependencies]
grafbase-sdk = { workspace = true, features = ["test-utils"] }
indoc.workspace = true
insta = { workspace = true, features = ["json"] }
openidconnect.workspace = true
ory-client.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
