[package]
name = "grpc"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
grafbase-sdk = { git = "https://github.com/grafbase/grafbase", branch = "sdk-deserialize-seed-for-arguments" }
prost = { version = "0.13.5", default-features = false, features = ["std"] }
serde.workspace = true
# TODO: probably not needed
serde_json.workspace = true
simd-json = { version = "0.15.0", default-features = false, features = ["serde"] }

[dev-dependencies]
async-stream = "0.3.6"
grafbase-sdk = { git = "https://github.com/grafbase/grafbase", branch = "sdk-deserialize-seed-for-arguments", features = [
    "test-utils",
] }
insta.workspace = true
prost = { version = "0.13.5", default-features = true }
rand = "0.9"
serde.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"
tonic = "0.12.3"

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
