[package]
name = "jwt"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
base64 = "0.22.1"
duration-str = "0.15.0"
grafbase-sdk = "0.9.0"
jwt-compact = { version = "0.8.0", features = [
    "clock",
    "rsa",
    "ed25519-compact",
    "p256",
] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
strum = { version = "0.27.1", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
grafbase-sdk = { version = "0.9.0", features = ["test-utils"] }
indoc = "2.0.6"
insta = { version = "1.42.2", features = ["json"] }
openidconnect = "4.0.0"
ory-client = "=1.9.0"
reqwest = "0.12.12"
tokio = { version = "1.44.0", features = [
    "rt-multi-thread",
    "macros",
    "test-util",
] }
