[package]
name = "jwt"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
base64.workspace = true
duration-str.workspace = true
grafbase-sdk.workspace = true
jwt-compact = { workspace = true, features = [
    "clock",
    "rsa",
    "ed25519-compact",
    "p256",
] }
oauth-protected-resource-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
futures.workspace = true
grafbase-sdk = { workspace = true, features = ["test-utils"] }
indoc.workspace = true
insta = { workspace = true, features = ["json"] }
openidconnect.workspace = true
ory-client.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "test-util",
] }
