[package]
name = "kafka"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util.workspace = true
grafbase-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
grafbase-sdk = { workspace = true, features = ["test-utils"] }
indoc.workspace = true
insta = { workspace = true, features = ["json"] }
rskafka = { version = "0.6.0", features = ["full"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
