[package]
name = "kafka"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util.workspace = true
fxhash.workspace = true
grafbase-sdk = { workspace = true, features = ["jq-selection"] }
postcard.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
template.workspace = true

[dev-dependencies]
chrono = { workspace = true, features = ["clock"] }
ctor.workspace = true
grafbase-sdk = { workspace = true, features = ["test-utils"] }
indoc.workspace = true
insta = { workspace = true, features = ["json"] }
rskafka = { workspace = true, features = ["full"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "tracing-log",
    "env-filter",
    "ansi",
] }
