[package]
name = "nats"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
grafbase-sdk = { version = "0.9.0", features = ["jq-selection"] }
serde = "1.0.218"
serde_json = "1"

[dev-dependencies]
indoc = "2"
insta = { version = "1.42.2", features = ["json"] }
grafbase-sdk = { version = "0.9.0", features = ["test-utils"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
serde_json = "1"
async-nats = "0.39.0"
