[package]
name = "nats"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
grafbase-sdk = { workspace = true, features = ["jq-selection"] }
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
template.workspace = true

[dev-dependencies]
async-nats.workspace = true
futures.workspace = true
grafbase-sdk = { workspace = true, features = ["test-utils"] }
indoc.workspace = true
insta = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
