[package]
name = "oauth-protected-resource"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
grafbase-sdk.workspace = true
oauth-protected-resource-shared.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }

[dev-dependencies]
grafbase-sdk = { workspace = true, features = ["test-utils"] }
insta.workspace = true
reqwest.workspace = true
tokio.workspace = true
