[package]
name = "postgres"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
grafbase-sdk = { path = "../../../grafbase/crates/grafbase-sdk" }
indexmap = "2.8.0"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
grafbase-sdk = { path = "../../../grafbase/crates/grafbase-sdk", features = ["test-utils"] }
indoc.workspace = true
insta = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
