[package]
name = "rest"
version = "0.1.3"
edition = "2024"
license = "MPL-2"
homepage = "https://grafbase.com"
keywords = ["graphql"]
repository = "https://github.com/grafbase/grafbase"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
grafbase-sdk = { workspace = true, features = ["jq-selection"] }
hashbrown.workspace = true
http.workspace = true
rapidhash.workspace = true
serde.workspace = true
serde_json.workspace = true
template.workspace = true

[dev-dependencies]
grafbase-sdk = { workspace = true, features = ["test-utils"] }
indoc.workspace = true
insta = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "test-util",
] }
wiremock.workspace = true
