[package]
name = "snowflake"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64.workspace = true
chrono.workspace = true
grafbase-sdk.workspace = true
jwt-compact = { features = ["rsa"], workspace = true }
pem.workspace = true
pkcs1.workspace = true
pkcs8.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
template.workspace = true

[dev-dependencies]
grafbase-sdk = { workspace = true, features = ["test-utils"] }
indoc.workspace = true
insta = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
toml.workspace = true
wiremock.workspace = true
