[package]
name = "tag"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
grafbase-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
grafbase-sdk = { workspace = true, features = [
    "test-utils",
] }
insta = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
