[package]
name = "www-authenticate"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
grafbase-sdk.workspace = true
serde.workspace = true

[dev-dependencies]
grafbase-sdk.workspace = true
insta.workspace = true
serde_json.workspace = true
tokio.workspace = true
